--- a/public/style.css
+++ b/public/style.css
@@ -39,7 +39,7 @@ body, html {
   min-width: 500px;
   background-attachment: fixed;
   background-image: linear-gradient(45deg, rgba(48, 160, 200, 0.36) 0%, rgba(48, 160, 200, 0.36) 27%,rgba(66, 208, 212, 0.36) 27%, rgba(66, 208, 212, 0.36) 30%,rgba(57, 184, 206, 0.36) 30%, rgba(57, 184, 206, 0.36) 38%,rgba(75, 232, 218, 0.36) 38%, rgba(75, 232, 218, 0.36) 41%,rgba(38, 135, 193, 0.36) 41%, rgba(38, 135, 193, 0.36) 67%,rgba(29, 111, 187, 0.36) 67%, rgba(29, 111, 187, 0.36) 68%,rgba(20, 87, 181, 0.36) 68%, rgba(20, 87, 181, 0.36) 71%,rgba(11, 63, 175, 0.36) 71%, rgba(11, 63, 175, 0.36) 100%),linear-gradient(45deg, rgba(120, 161, 172, 0.37) 0%, rgba(120, 161, 172, 0.37) 12.5%,rgba(83, 81, 120, 0.37) 12.5%, rgba(83, 81, 120, 0.37) 25%,rgba(132, 188, 189, 0.37) 25%, rgba(132, 188, 189, 0.37) 37.5%,rgba(95, 108, 137, 0.37) 37.5%, rgba(95, 108, 137, 0.37) 50%,rgba(144, 215, 206, 0.37) 50%, rgba(144, 215, 206, 0.37) 62.5%,rgba(107, 135, 154, 0.37) 62.5%, rgba(107, 135, 154, 0.37) 75%,rgba(156, 242, 223, 0.37) 75%, rgba(156, 242, 223, 0.37) 87.5%,rgba(71, 54, 103, 0.37) 87.5%, rgba(71, 54, 103, 0.37) 100%),linear-gradient(63deg, rgb(156, 214, 233),rgb(74, 10, 132));
-  overflow-x: hidden;
+  overflow-x: hidden; /* ERROR FUCKS UP INFINITE LOADING TRIGGERED SCROLLING */
 }
 .container {max-width: 1340px!important; margin: 1em auto; flex: 1;}
 
@@ -769,52 +769,20 @@ a.lightbox-close {
 }
 
 /* NEW USER PAGE */
-.container-user {
-  background-color: var(--white-shade-2);
-  border-radius: 10px;
-  padding: 0!important;
-  box-shadow: 6px 6px 5px -2px rgba(42, 67, 111, 0.67), -6px -6px 5px -2px rgba(155, 183, 232, 0.23);
-  box-sizing: border-box;
-  min-height: unset;
+
+.row-height {
+  height: 100%;
+  width: 100%;
+  margin: 0
 }
 
-.user-menu {
-  background-color: #4b60ae;
-  border-radius: 10px 0 0 10px;
-}
-
-.user-menu li {
-  list-style-type: none;
-  font-size: 30px;
-  margin: 20px 10px;
-}
-.user-menu a {color: var(--white-shade-1);}
-.user-menu a:hover {
-  text-decoration: none;
-  color: var(--color-shade-1);
-}
-.fa-chevron-right.active {color: var(--color-shade-2);}
-
+.menu-link.active {color: var(--color-shade-2);}
+.menu-link.disabled {color: var(--color-shade-3); cursor: default}
+.menu-link.disabled:hover {color: var(--color-shade-3);}
 
 .user-section {padding: 20px!important;}
 .user-section.col-8 {box-shadow: -1px 0 2px 0 rgb(75, 96, 174, 0.75);}
-.user-section.col-4 {box-shadow: -1px 0 2px 0 rgb(75, 96, 174, 0.75);}
-
-.user-heading {
-  text-align: center;
-  border-bottom: 1px solid var(--color-shade-2);
-  margin-bottom: 5px;
-}
-.user-heading h2 {
-  color: var(--color-shade-2);
-  font-size: 40px;
-}
-.user-heading h6 {
-  margin-top: -2px;
-  color: var(--dark-shade-2);
-  opacity: 0.5;
-  font-style: italic;
-}
+/*.user-section.col-4 {box-shadow: -1px 0 2px 0 rgb(75, 96, 174, 0.75);}*/
 
 .control-label { /* form */
   color: var(--color-shade-3);
@@ -889,3 +857,140 @@ td a {
   font-size: 15px;
 }
 /* END NEW USER PAGE*/
+
+/* NEW CONTACT PAGE */
+.contact-section {padding: 20px;}
+#submit-contact {
+  width: 50%;
+  margin: auto;
+  height: 75px;
+}
+/* END NEW CONTACT PAGE*/
+
+/* NEW BIO PAGE */
+.bio-section {
+  display:flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.biography {
+  display: grid;
+  /*flex-grow: 1;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: auto;*/
+  padding: 10px;
+  margin: 20px 10px;
+  box-shadow: 3px 3px 5px 0px rgba(165, 165, 165, 0.75), -3px -3px 5px 0px rgba(255, 255, 255, 0.79);
+
+}
+
+.bio-square {
+  background-color: #e8e8e8;
+  height: 90%;
+  margin: 0 15px 0px 15px;
+  padding: 30px;
+}
+
+.square-title {
+  color: var(--color-shade-2);
+  font-size: 28px;
+  font-weight: bold;
+  /*font-family:*/
+}
+
+.square-txt {
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
+}
+
+.square-img {
+  display: inline-block;
+  width: 25%;
+  margin: 3px 20px 5px 0;
+  /*margin-top: -10px;
+  margin-left: 50%;
+  transform: translateX(-50%);*/
+  box-shadow: 3px 3px 5px 0px rgba(165, 165, 165, 0.75), -3px -3px 5px 0px rgba(255, 255, 255, 0.79);
+}
+
+/* END NEW BIO PAGE */
+
+/* CONTAINER WITH MENU */
+.container-with-menu {
+  background-color: var(--white-shade-2);
+  border-radius: 10px;
+  padding: 0!important;
+  box-shadow: 6px 6px 5px -2px rgba(42, 67, 111, 0.67), -6px -6px 5px -2px rgba(155, 183, 232, 0.23);
+  box-sizing: border-box;
+  min-height: unset;
+}
+
+.menu {
+  background-color: #4b60ae;
+  border-radius: 10px 0 0 10px;
+}
+
+.menu li {
+  list-style-type: none;
+  font-size: 30px;
+  margin: 20px 10px;
+}
+.menu a {color: var(--white-shade-1);}
+.menu a:hover {
+  text-decoration: none;
+  color: var(--color-shade-1);
+}
+.chev {margin-top: 10px;float: right;}
+
+.section-heading {
+  text-align: center;
+  border-bottom: 1px solid var(--color-shade-2);
+  margin-bottom: 5px;
+}
+.section-heading h2 {
+  color: var(--color-shade-2);
+  font-size: 40px;
+}
+.section-heading h6 {
+  margin-top: -2px;
+  color: var(--dark-shade-2);
+  opacity: 0.5;
+  font-style: italic;
+}
+
+.section-heading h5 {
+  margin-top: -2px;
+  color: var(--dark-shade-2);
+  opacity: 0.5;
+  font-style: italic;
+}
+/* END CONTAINER WITH MENU */
+
+/* NEW BLOG */
+
+.container-blogx {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
+  padding: 40px 40px;
+  border-radius: 10px;
+}
+
+.blog-row {
+  box-shadow: 3px 3px 5px 0px rgba(165, 165, 165, 0.75), -3px -3px 5px 0px rgba(255, 255, 255, 0.79);
+  margin: 10px;
+  padding: 15px;
+}
+
+.blog-titlex a {
+  font-size: 24px;
+  font-weight: 600;
+  color: var(--color-shade-2);
+}
+
+.blog-author {color: var(--color-shade-1);}
+.blog-info {font-style: italic; color: lightgrey}
+.blog-date {}
+.blog-content {}
+
+/* END NEW BLOG */
