--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,7 +1,13 @@
 <% include partials/head %>
 
-<div class="container"> 
-        <h1 class="err404">ERROR: 404</h1>
+<div class="container">
+        <div class="wrapper-404">
+                <h1>404</h1>
+                <h5>You appear to be lost, click this button !</h6>
+                <form action="/">
+                        <button class="btn-404"><i class="fas fa-home fa-2x"></i></button>
+                </form>
+        </div> 
 </div>
   
 <% include partials/footer %>
