--- a/public/style.css
+++ b/public/style.css
@@ -338,8 +338,8 @@ footer {
 }
 /* END GLOBAL */
 
-/* LOGIN */
-#login-form {padding: 0 20px 0 20px;}
+/* LOGIN 
+#login-form {padding: 0 20px 0 20px;}*/
 
 .form-title {color: var(--color-shade-3);}
 .form-container{
@@ -1082,5 +1082,173 @@ td a {
   font-size: 20px;
   text-align: center;
 }
-
 /* END NEW BLOG */
+
+
+
+/* NEW ACCOUNT PAGE (login/register/lostpw) */
+
+#login {
+  padding: 50px;
+}
+
+.login-section {
+  padding: 50px;
+  box-shadow: 3px 3px 5px 0px rgba(165, 165, 165, 0.75), -3px -3px 5px 0px rgba(255, 255, 255, 0.79);
+}
+.register-section {}
+
+/* END NEW ACCOUNT PAGE */
+
+button:active, input[type="submit"]:active {
+  transform: scale(0.95);
+}
+
+.ghost {
+  background-color: transparent;
+  border: 1px solid var(--white-shade-1);
+  color: var(--white-shade-1);
+  font-size: 12px;
+  font-weight: bold;
+  padding: 12px 45px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  transition: transform 80ms ease-in;
+}
+button:focus {outline: none;}
+
+.form-slider {
+  background-color: var(--white-shade-1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 50px;
+  height: 100%;
+  text-align: center;
+}
+
+.form-slider input {
+  background-color: #e6e6e6!important;
+  border: none;
+  padding: 12px 15px;
+  margin: 8px 0;
+  width: 100%;
+}
+
+#container {
+  background-color: var(--white-shade-1);
+  box-shadow: 3px 3px 5px 0px rgba(165, 165, 165, 0.75), -3px -3px 5px 0px rgba(255, 255, 255, 0.79);
+  position: relative;
+  overflow: hidden;
+  width: 768px;
+  max-width: 100%;
+  min-height: 480px;
+}
+
+.form-slider-container {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  transition: all 0.6s ease-in-out;
+}
+
+.sign-in-container {
+  left: 0;
+  width: 50%;
+  z-index: 2;
+}
+.sign-up-container {
+  left: 0;
+  width: 50%;
+  opacity: 0;
+  z-index: 1;
+}
+
+.container.right-panel-active .sign-in-container {transform: translateX(100%);}
+.container.right-panel-active .sign-up-container {
+  transform: translateX(100%);
+  opacity: 1;
+  z-index: 5;
+  animation: show 0.6s;
+}
+
+@keyframes show {
+  0%,
+  49.99% {
+      opacity: 0;
+      z-index: 1;
+  }
+
+  50%,
+  100% {
+      opacity: 1;
+      z-index: 5;
+  }
+}
+
+.overlay-container {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+  transition: transform 0.6s ease-in-out;
+  z-index: 100;
+}
+.container.right-panel-active .overlay-container {transform: translateX(-100%);}
+
+.overlay {
+  background: var(--color-shade-2);
+  background: linear-gradient(to right, var(--color-shade-2), var(--color-shade-3));
+  color: var(--white-shade-1);
+  position: relative;
+  left: -100%;
+  height: 100%;
+  width: 200%;
+  transform: translateX(0);
+  transition: transform 0.6s ease-in-out;
+}
+
+.container.right-panel-active .overlay {transform: translateX(50%);}
+
+.overlay-panel {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  text-align: center;
+  top: 0;
+  height: 100%;
+  width: 50%;
+  transform: translateX(0);
+  transition: transform 0.6s ease-in-out;
+}
+
+.overlay-left {transform: translateX(-20%);}
+.container.right-panel-active .overlay-left {transform: translateX(0);}
+.container.right-panel-active .overlay-right {transform: translateX(20%);}
+.overlay-right {
+  right: 0;
+  transform: translateX(0);
+}
+
+
+
+.form-control-test {
+  background-color: #e6e6e6!important;
+  border: none;
+  padding: 12px 15px;
+  margin: 8px 0;
+  width: 100%;
+}
+
+.lostpw-section {
+  color: white;
+  margin: 30% 0 0 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 3px 3px 5px 0px rgba(165, 165, 165, 0.75), -3px -3px 5px 0px rgba(255, 255, 255, 0.79);
+}
