--- a/views/Account.ejs
+++ b/views/Account.ejs
@@ -5,7 +5,7 @@
       <div class="menu col-3">
         <ul>
           <li><a href="#" onclick="openTab(event, this, 'login')" class="menu-link active disabled"><i class="fas fa-sign-in-alt mr-2"></i> Connexion <i class="fas fa-chevron-right chev"></i></a></li>
-          <li><a href="#" onclick="openTab(event, this, 'lostpw')" class="menu-link"><i class="fas fa-key mr-2"></i> <span style="font-size: 20px;">Mot de passe oublié</span> <i class="fas fa-chevron-right chev"></i></a></li>
+          <li><a href="#" onclick="openTab(event, this, 'lostpw-container')" class="menu-link"><i class="fas fa-key mr-2"></i> <span style="font-size: 20px;">Mot de passe oublié</span> <i class="fas fa-chevron-right chev"></i></a></li>
           <!--<li><a href="#" onclick="openTab(event, this, 'resetpw')" class="menu-link"><i class="fas fa-envelope mr-2"></i> Reset Password <i class="fas fa-chevron-right chev"></i></a></li>-->
         </ul>
       </div>
@@ -58,18 +58,20 @@
         </div>
       </div>
   
-      <div id="lostpw" class="tab col-9">
-        <section class="lostpw-section col-6 offset-3 p-5">
-            <div class="section-heading">
-                <h2>Récupération de mot de passe</h2>
-                <h6>Nous vous enverrons un <b>mail</b> pour réinitaliser votre mot de passe</h6>
-            </div>
-            <form id="lostpw" method="POST" action="/api/user/lostpw">
-                <input placeholder="Email" class="form-control-test" type="email" id="email-reset" name="email" value="<% if (locals.email) { %><%= locals.email %><% } %>" onkeyup="Validate.Email(this);" required>
-                <span id="i_email-reset" class="form-info">E-mail has to be valid</span>
+      <div id="lostpw-container" class="tab col-9">
+        <section class="lostpw-section col-10 offset-1 p-5">
+            <div class="box">
+                <div class="section-heading mb-5">
+                    <h2>Récupération de mot de passe</h2>
+                    <h6>Nous vous enverrons un <b>mail</b> pour réinitaliser votre mot de passe</h6>
+                </div>
+                <form class="col-8 offset-2" id="lostpw" method="POST" action="/api/user/lostpw">
+                    <input placeholder="Email" class="form-control-test" type="email" id="email-reset" name="email" value="<% if (locals.email) { %><%= locals.email %><% } %>" onkeyup="Validate.Email(this);" required>
+                    <span id="i_email-reset" class="form-info">E-mail has to be valid</span>
 
-                <input type="submit" class="logbtn" value="Envoyer" id="submit-lostpw">
-              </form>
+                    <input type="submit" class="logbtn" value="Envoyer" id="submit-lostpw">
+                </form>
+            </div>
         </section>
       </div>
     </div>
