--- a/views/home.ejs
+++ b/views/home.ejs
@@ -67,11 +67,11 @@
     <!--/.Slides-->
     <!--Controls-->
     <a class="carousel-control-prev" href="#carousel-thumb" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span><i class="fas fa-chevron-left fa-4x"></i></span>
       <span class="sr-only">Previous</span>
     </a>
     <a class="carousel-control-next" href="#carousel-thumb" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span><i class="fas fa-chevron-right fa-4x"></i></span>
       <span class="sr-only">Next</span>
     </a>
     <!--/.Controls-->
